# petmanager

./: Dockerfile  Dockerfile.test  NextSteps.md  README.md  petmanager.py  petmanagerclient.py  pyproject.toml  requirements.txt  server-fastapi.py  test.py  ui.py
petmanager/: Dockerfile  log.py  petmanager.py  petmanager_redis.py  petmanagerclient.py  server_fastapi.py  test_petmgr.py  ui.py
