[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "petmanager"
version = "0.0.1"
authors = [
  { name="Pasha", email="user@domain.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: proprietary",
    "Operating System :: OS Independent",
]
[project.scripts]
server = "petmanager.server_fastapi:main"